--- a/Wiped.Shared/Wiped.Shared.csproj
+++ b/Wiped.Shared/Wiped.Shared.csproj
@@ -7,4 +7,18 @@
 		<Nullable>enable</Nullable>
   	</PropertyGroup>
 
+	<ItemGroup>
+	  	<PackageReference Include="YamlDotNet" Version="16.3.0"/>
+	</ItemGroup>
+
+	<ItemGroup>
+  		<ProjectReference Include="..\Wiped.Analyzers\Wiped.Analyzers.csproj"
+			OutputItemType="Analyzer"
+            ReferenceOutputAssembly="false" />
+
+  		<ProjectReference Include="..\Wiped.Generators\Wiped.Generators.csproj"
+			OutputItemType="Analyzer"
+            ReferenceOutputAssembly="false" />
+	</ItemGroup>
+
 </Project>
