--- a/Wiped.Shared/Wiped.Shared.csproj
+++ b/Wiped.Shared/Wiped.Shared.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net10.0</TargetFramework>
 		<RootNamespace>Wiped.Shared</RootNamespace>
+    	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
   	</PropertyGroup>
